tests/ui/consts/const-float-classify.stderr
error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/const-float-classify.rs:13:12
   |
LL | impl const PartialEq<NonDet> for bool {
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 1 previous error

